# nwb-linkml

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pytest.ini
docs/: Makefile  changelog.md  conf.py  directives.py  index.md  pyproject.toml  read_output.txt  todo.md
docs/_notes/: pynwb.md  schema.md  todo.md
docs/_static/css/: custom.css
docs/_templates/: module.rst._t  package.rst_t
docs/api/: index.md
docs/api/models/: nwb_linkml.models.pydantic.core.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_base.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_behavior.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_device.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_ecephys.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_epoch.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_file.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_icephys.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_image.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_language.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_misc.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_ogen.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_ophys.rst  nwb_linkml.models.pydantic.core.v2_2_0.core_nwb_retinotopy.rst  nwb_linkml.models.pydantic.core.v2_2_0.namespace.rst  nwb_linkml.models.pydantic.core.v2_2_0.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_base.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_behavior.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_device.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_ecephys.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_epoch.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_file.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_icephys.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_image.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_language.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_misc.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_ogen.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_ophys.rst  nwb_linkml.models.pydantic.core.v2_2_1.core_nwb_retinotopy.rst  nwb_linkml.models.pydantic.core.v2_2_1.namespace.rst  nwb_linkml.models.pydantic.core.v2_2_1.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_base.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_behavior.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_device.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_ecephys.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_epoch.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_file.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_icephys.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_image.rst  nwb_linkml.models.pydantic.core.v2_2_2.core_nwb_language.rst  (+126 more)
docs/api/nwb_linkml/: index.md  lang_elements.md  monkeypatch.md
docs/guide/: quickstart.md
docs/intro/: index.md  nwb.md  purpose.md  translation.md
docs/meta/: changelog.md  references.md  todo.md
docs/notes/: linkml.md  pynwb.md  schema.md  storage.md  todo.md  translation.md
hdf5_linkml/: README.md  pyproject.toml
nwb-schema-linkml/: CONTRIBUTING.md  Makefile  README.md  about.yaml  pyproject.toml
nwb-schema-linkml/examples/: Namespaces-001.yaml  README.md
nwb-schema-linkml/tests/: test_data.py
nwb_linkml/: .coveragerc  __init__.py  conftest.py  constants.py  io.py  lang_elements.py  linkml.py  map.py  namespaces.py  plot.py  pyproject.toml  translate.py
nwb_linkml/adapters/: __init__.py  adapter.py  classes.py  dataset.py  group.py  namespaces.py  schema.py
nwb_linkml/generators/: pydantic.py  sqlmodel.py
nwb_linkml/maps/: __init__.py  dtype.py  namespace.py  preload.py  quantity.py  source.py
nwb_linkml/models/: core.nwb.base.py  core.nwb.behavior.py  core.nwb.device.py  core.nwb.ecephys.py  core.nwb.epoch.py  core.nwb.file.py  core.nwb.icephys.py  core.nwb.image.py  core.nwb.misc.py  core.nwb.ogen.py  core.nwb.ophys.py  core.nwb.retinotopy.py  core.py  core_nwb_base.py  core_nwb_base_include.py  core_nwb_behavior.py  core_nwb_behavior_include.py  core_nwb_device.py  core_nwb_device_include.py  core_nwb_ecephys.py  core_nwb_ecephys_include.py  core_nwb_epoch.py  core_nwb_epoch_include.py  core_nwb_file.py  core_nwb_file_include.py  core_nwb_icephys.py  core_nwb_icephys_include.py  core_nwb_image.py  core_nwb_image_include.py  core_nwb_misc.py  core_nwb_misc_include.py  core_nwb_ogen.py  core_nwb_ogen_include.py  core_nwb_ophys.py  core_nwb_ophys_include.py  core_nwb_retinotopy.py  core_nwb_retinotopy_include.py  hdmf-common.base.py  hdmf-common.py  hdmf-common.sparse.py  (+16 more)
nwb_linkml/schema/: core.nwb.base.include.yaml  core.nwb.base.yaml  core.nwb.behavior.include.yaml  core.nwb.behavior.yaml  core.nwb.device.include.yaml  core.nwb.device.yaml  core.nwb.ecephys.include.yaml  core.nwb.ecephys.yaml  core.nwb.epoch.include.yaml  core.nwb.epoch.yaml  core.nwb.file.include.yaml  core.nwb.file.yaml  core.nwb.icephys.include.yaml  core.nwb.icephys.yaml  core.nwb.image.include.yaml  core.nwb.image.yaml  core.nwb.misc.include.yaml  core.nwb.misc.yaml  core.nwb.ogen.include.yaml  core.nwb.ogen.yaml  core.nwb.ophys.include.yaml  core.nwb.ophys.yaml  core.nwb.retinotopy.include.yaml  core.nwb.retinotopy.yaml  core.yaml  hdmf-common.base.include.yaml  hdmf-common.base.yaml  hdmf-common.sparse.include.yaml  hdmf-common.sparse.yaml  hdmf-common.table.include.yaml  hdmf-common.table.yaml  hdmf-common.yaml  hdmf-experimental.experimental.include.yaml  hdmf-experimental.experimental.yaml  hdmf-experimental.resources.include.yaml  hdmf-experimental.resources.yaml  hdmf-experimental.yaml  nwb.language.yaml
nwb_linkml/tests/: conftest.py  fixtures.py  test_annotations.py  test_config.py  test_generate.py  test_includes.py  test_linkml.py  test_logging.py  test_maps.py  test_provider.py  test_translate.py
nwb_models/: README.md  pyproject.toml
nwb_schema_language/: .gitignore  Makefile  config.env  config.yaml  pyproject.toml
nwb_schema_language/docs/: CHANGELOG.md
nwb_schema_language/tests/: test_data.py  test_mixins.py
(+999 files in other folders)
