[project]
description = "Monorepo root for nwb-linkml"
dependencies = []
requires-python = "<3.13,>=3.10"

[tool.pdm.dev-dependencies]
dev = [
    '-e nwb-linkml @ file:///${PROJECT_ROOT}/nwb_linkml',
    '-e nwb-schema-language @ file:///${PROJECT_ROOT}/nwb_schema_language',
    '-e docs @ file:///${PROJECT_ROOT}/docs',
]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.lock,*.css,./nwb_linkml/src/nwb_linkml/models,./nwb_linkml/src/nwb_linkml/schema'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''