[tool.poetry]
name = "hdf5-linkml"
version = "0.1.0"
description = "Adapt and load hdf5 files to linkml-pydantic models"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "hdf5_linkml", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
h5py = "^3.9.0"
nwb_linkml = { path = '..', develop = true, optional = true }
linkml = "^1.5.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
