[tool.poetry]
name = "nwb-linkml"
version = "0.1.0"
description = "Translating NWB schema language to LinkML"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    {include = "nwb_linkml", from="src"},
    #{include = "nwb_schema_language", from="../nwb_schema_language/src"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyyaml = "^6.0"
linkml-runtime = "^1.5.6"
nwb_schema_language = "^0.1.1"
rich = "^13.5.2"
linkml = "^1.5.7"
nptyping = "^2.5.0"
pydantic = "^2.3.0"
h5py = "^3.9.0"
dash = {version="^2.12.1", optional=true}
dash-cytoscape = {version="^0.3.0", optional=true}
pytest = { version="^7.4.0", optional=true}
pytest-depends = {version="^1.0.1", optional=true}
coverage = {version = "^6.1.1", optional = true}
pytest-md = {version = "^0.2.0", optional = true}
pytest-cov = {version = "^4.1.0", optional = true}
coveralls = {version = "^3.3.1", optional = true}
pytest-profiling = {version = "^1.7.0", optional = true}
pydantic-settings = "^2.0.3"
dask = "^2023.9.2"
blosc2 = "^2.2.7"
tqdm = "^4.66.1"


[tool.poetry.extras]
tests = [
    "pytest",       "pytest-depends", "coverage",  "pytest-md",
    "pytest-cov",   "coveralls",      "pytest-profiling"
]
plot = ["dash", "dash-cytoscape"]


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
pytest-depends = "^1.0.1"
coverage = "^6.1.1"
pytest-md = "^0.2.0"
pytest-emoji = "^0.2.0"
pytest-cov = "^4.1.0"
coveralls = "^3.3.1"
pytest-profiling = "^1.7.0"

[tool.poetry.group.plot]
optional = true

[tool.poetry.group.plot.dependencies]
dash = "^2.12.1"
dash-cytoscape = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = [
    "--cov=nwb_linkml",
    "--cov-append",
    "--cov-config=.coveragerc"
]
testpaths = [
    "tests",
    'nwb_linkml/tests'
]
