[project]
name = "nwb-models"
version = "0.2.0"
description = "Pydantic/LinkML models for Neurodata Without Borders"
authors = [
    {name = "sneakers-the-rat", email = "sneakers-the-rat@protonmail.com"},
]
dependencies = [
    "pydantic>=2.3.0",
    "numpydantic>=1.3.3",
    "pandas>=2.2.2"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL-3.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
