[tool.poetry]
name = "nwb_schema_language"
version = "0.1.2"
description = "Translation of the nwb-schema-language to LinkML"
authors = ["Jonny Saunders <j@nny.fyi>"]
license = "GNU GPL v3.0"
readme = "README.md"
homepage = "https://nwb-linkml.readthedocs.io"
repository = "https://github.com/p2p-ld/nwb-linkml/"
documentation = "https://nwb-linkml.readthedocs.io"
packages = [
    { include = "nwb_schema_language", from="src"}
]
include = ["README.md", "src/nwb_schema_language/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
pydantic = "^2.3.0"


[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[tool.poetry.scripts]
run_patches = 'nwb_schema_language.patches:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]