[project]
name = "nwb-schema-language"
authors = [
    {name = "Jonny Saunders", email = "j@nny.fyi"},
]
license = {text = "AGPL-3.0"}
requires-python = "<3.13,>=3.10"
dependencies = [
    "linkml-runtime>=1.7.7",
    "pydantic>=2.3.0",
]
version = "0.1.3"
description = "Translation of the nwb-schema-language to LinkML"
readme = "README.md"

[project.urls]
homepage = "https://nwb-linkml.readthedocs.io"
repository = "https://github.com/p2p-ld/nwb-linkml/"
documentation = "https://nwb-linkml.readthedocs.io"

[project.scripts]
run_patches = "nwb_schema_language.patches:main"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "linkml<2.0.0,>=1.3.5",
    "mkdocs-material<9.0.0,>=8.2.8",
    "mkdocs-mermaid2-plugin<1.0.0,>=0.6.0",
    "schemasheets<1.0.0,>=0.1.14",
]

[tool.pdm.build]
includes = ["src/nwb_schema_language", "README.md", "src/nwb_schema_language/schema", "project"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

